<resources>
    <string name="app_name">SmartAlert</string>

    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Loginbtn">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name="ForgotPass">Forgot Password</string>
    <string name="changeLang">Change Language</string>
</resources>
