<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emergency"
    tools:context=".Login">
    <EditText
        android:id="@+id/email"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        android:layout_marginLeft="72dp" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="84dp"
        android:fontFamily="casual"
        android:text="@string/Login"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="164dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="266dp"
        android:layout_height="54dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginLeft="80dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="142dp"
        android:layout_height="68dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="@string/Loginbtn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginLeft="132dp" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="13dp"
        android:fontFamily="casual"
        android:text="@string/CreateAccount"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        android:layout_marginLeft="140dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="13dp"
        android:indeterminateTint="@android:color/holo_orange_light"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword"
        android:layout_marginLeft="180dp" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="13dp"
        android:text="@string/ForgotPass"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount"
        android:layout_marginLeft="148dp" />

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeLang"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />


</androidx.constraintlayout.widget.ConstraintLayout>